Added tab completion for players for ChatColor and Channel whether .others permission are given